--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: petrohub2_development
+  pool: 5
+  username: suyesh
+  password: mustang4
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: petrohub2_test
+  pool: 5
+  username: suyesh
+  password: mustang4
+
 
 production:
   <<: *default
